# dive-server

./: .env.default  .flake8  .gitignore  Dockerfile  Local Development.md  README.md  mypy.ini  pyproject.toml  pytest.ini  setup.cfg
.github/: pull_request_template.md
.github/workflows/: black.yml  build.yml
apps/core/: actions.py  admin.py  apps.py  enums.py  factories.py  filter_set.py  models.py  mutations.py  schema.py  serializers.py  tasks.py  types.py  utils.py  validators.py
apps/core/actions/: __init__.py  base.py  cast_column.py  utils.py
apps/core/migrations/: 0001_initial.py  0002_table_cloned_from.py  0002_table_error_table_has_errored_table_status_and_more.py  0002_table_status_alter_dataset_status.py  0003_remove_dataset_file_size_bytes_and_more.py  0003_snapshot_remove_action_column_table_original_name_and_more.py  0003_table_original_name.py  0004_alter_action_created_by_alter_action_modified_by_and_more.py  0004_alter_action_unique_together_action_snapshot_and_more.py  0004_snapshot.py  0005_remove_action_parameters_action_action_name_and_more.py  0005_snapshot_column_stats_snapshot_version.py  0005_table_preview_data.py  0006_action_parameters.py  0007_alter_table_cloned_from_join_table_joined_from.py  0008_alter_table_dataset.py  0009_remove_dataset_extra_data_remove_table_extra_data.py  0010_alter_table_preview_data.py
apps/core/tests/: test_actions.py  test_mutations.py  test_queries.py  test_schemas.py  test_tasks.py  utils.py
apps/datasets/: apps.py  models.py
apps/datasets/tests/: test_apis.py
apps/file/: admin.py  apps.py  enums.py  factories.py  filter_set.py  models.py  mutations.py  receivers.py  schema.py  serializers.py  utils.py
apps/file/migrations/: 0001_initial.py  0002_file_file_size.py  (+2 more)
apps/file/tests/: test_mutation.py  (+1 more)
dive/: __init__.py  asgi.py  auth.py  base_models.py  base_test.py  celery.py  checks.py  consts.py  enums.py  factories.py  schema.py  sentry.py  settings.py  urls.py  wsgi.py
scripts/: run_dev.sh  run_prod.sh  run_web.sh
utils/: common.py  decorators.py  extraction.py  helpers.py  parsing.py
utils/graphene/: enums.py  error_types.py  fields.py  filters.py  middleware.py  mutation.py  pagination.py  tests.py  types.py
utils/tests/: test_extraction.py
(+1 files in other folders)
