[tool.poetry]
name = "dive-server"
version = "0.1.0"
description = "Application server for DIVE"
authors = ["Bibek Pandey <bewakepandey@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.7"
Django = "^4.1.1"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]
typing-extensions = "^4.3.0"

[tool.poetry.group.dev.dependencies]
django-stubs = {extras = ["compatible-mypy"], version = "^1.12.0"}
mypy = "^0.930"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
